--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
             <p>Hello! I am Rahul Chona. Mobile App Developer, Selenium Automation Engineer, Web Developer.</p>
-            <p> Experienced Senior Software Engineer with a demonstrated history of working in the information technology and services industry. Skilled in Test Automation, Java, .NET Framework, HTML, and Selenium. Strong engineering professional with a Bachelor's of Technology focused in Computer Science and, currently, pursuing Master of Engineering (M.Eng.) focused in Software Engineering and Intelligent Systems. I am a mobile Enthusiast, I love perfectionism and can do anything to achieve the goals. I can lead and and I can follow. I can design and can follow other's design. I think application should be easy to use and handy . A right element at right time is my way of creating product.</p>
+            <p> Experienced Senior Software Engineer with a demonstrated history of working in the information technology and services industry. Skilled in Test Automation, Java, .NET Framework, HTML, and Selenium. Strong engineering professional with a Bachelor's of Technology focused in Computer Science and, currently, pursuing Master of Engineering (M.Eng.) focused in Software Engineering and Intelligent Systems.\nI am a mobile Enthusiast, I love perfectionism and can do anything to achieve the goals. I can lead and and I can follow. I can design and can follow other's design. I think application should be easy to use and handy . A right element at right time is my way of creating product.</p>
           </div>
         </div>
         <div class="col-lg-6 col-md-12">
@@ -74,11 +74,11 @@
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
-              <div class="col-sm-8">rahulchona11@gmail.com/chona@ualberta.ca</div>
+              <div class="col-sm-8">rahulchona11@gmail.com / chona@ualberta.ca</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
-              <div class="col-sm-8">+15785686162/+91-9654997691(Whatsapp)</div>
+              <div class="col-sm-8">+15785686162 / +91-9654997691(Whatsapp)</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
