--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
-              <div class="col-sm-8">8015 160 St NorthWest, 81st Ave., Edmonton, Alberta, Canada</div>
+              <div class="col-sm-8">8015, 106 St, NorthWest, 81st Ave., Edmonton, Alberta, Canada</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
