--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
             <p>Hello! I am Rahul Chona. Mobile App Developer, Selenium Automation Engineer, Web Developer.</p>
-            <p> Experienced Senior Software Engineer with a demonstrated history of working in the information technology and services industry. Skilled in Test Automation, Java, .NET Framework, HTML, and Selenium. Strong engineering professional with a Bachelor's of Technology focused in Computer Science and, currently, pursuing Master of Engineering (M.Eng.) focused in Software Engineering and Intelligent Systems.\nI am a mobile Enthusiast, I love perfectionism and can do anything to achieve the goals. I can lead and and I can follow. I can design and can follow other's design. I think application should be easy to use and handy . A right element at right time is my way of creating product.</p>
+            <p> Experienced Senior Software Engineer with a demonstrated history of working in the information technology and services industry. Skilled in Test Automation, Java, .NET Framework, HTML, and Selenium. Strong engineering professional with a Bachelor's of Technology focused in Computer Science and, currently, pursuing Master of Engineering (M.Eng.) focused in Software Engineering and Intelligent Systems. I am a mobile Enthusiast, I love perfectionism and can do anything to achieve the goals. I can lead and and I can follow. I can design and can follow other's design. I think application should be easy to use and handy . A right element at right time is my way of creating product.</p>
           </div>
         </div>
         <div class="col-lg-6 col-md-12">
@@ -127,6 +127,22 @@
             <div class="progress-container progress-primary"><span class="progress-badge">AWS</span>
               <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div><span class="progress-value">50%</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="progress-container progress-primary"><span class="progress-badge">Java</span>
+              <div class="progress">
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 55%;"></div><span class="progress-value">55%</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="progress-container progress-primary"><span class="progress-badge">.Net</span>
+              <div class="progress">
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 55%;"></div><span class="progress-value">55%</span>
               </div>
             </div>
           </div>
