--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-          <div class="card-body">
+          <div class="card-body cc-experience-header">
             <div class="h5">Senior Software Engineer</div>
           </div>
         </div>
