--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <div class="h5">Appster LLP</div>
           </div>
         </div>
-        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+        <div class="col-md-3 bg-primary" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-experience-header">
             <div class="h5">Senior Software Engineer</div>
           </div>
