--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
               <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#about">About</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#skill">Skills</a></li>
-                <li class="nav-item"><a class="nav-link smooth-scroll" href="#portfolio">Portfolio</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#experience">Experience</a></li>
                 <li class="nav-item"><a class="nav-link smooth-scroll" href="#contact">Contact</a></li>
               </ul>
@@ -178,7 +177,7 @@
             <div class="h5">Appster LLP</div>
           </div>
         </div>
-        <div class="col-md-3 bg-primary" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Senior Software Engineer</div>
           </div>
