--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Senior Software Engineer</div>
+            <p class="category">Gurugram</p>
           </div>
         </div>
       </div>
@@ -195,6 +196,7 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">iOS Developer</div>
+            <p class="category">Gurugram</p>
           </div>
         </div>
       </div>
@@ -210,6 +212,7 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">iOS Developer</div>
+            <p class="category">Gurugram</p>
           </div>
         </div>
       </div>
@@ -225,6 +228,7 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">iOS Developer</div>
+            <p class="category">Gurugram</p>
           </div>
         </div>
       </div>
