--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="content-center">
           <div class="cc-profile-image"><a href="#"><img src="images/anthony.jpg" alt="Image"/></a></div>
           <div class="h2 title">Rahul Chona</div>
-          <p class="category text-white">Mobile App Developer, Selenium Automation Engineer, Web Developer</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a>
+          <p class="category text-white">Mobile App Developer, Selenium Automation Engineer, Web Developer</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Contact Me</a>
         </div>
       </div>
       <div class="section">
