updated contact me section on page Also, muted the contact form and used mailto instead justified content center for responsive behaviour

--- a/index.html
+++ b/index.html
@@ -292,13 +292,13 @@
   <div class="cc-contact-information" style="background-image: url('images/staticmap.png');">
     <div class="container">
       <div class="cc-contact">
-        <div class="row">
-          <div class="col-md-9">
+        <div class="row justify-content-center">
+          <div class="col-md-auto col-lg-auto">
             <div class="card mb-0" data-aos="zoom-in">
               <div class="h4 text-center title">Contact Me</div>
               <div class="row">
-                <div class="col-md-6">
-                  <div class="card-body">
+                <div class="col-md-auto col-lg-auto">
+                  <!-- <div class="card-body">
                     <form action="https://formspree.io/your@email.com" method="POST">
                       <div class="p pb-3"><strong>Feel free to contact me </strong></div>
                       <div class="row mb-3">
@@ -336,17 +336,25 @@
                       </div>
                     </form>
                   </div>
-                </div>
-                <div class="col-md-6">
+                </div> -->
+                <!-- <div class=""> -->
                   <div class="card-body">
                     <p class="mb-0"><strong>Address </strong></p>
-                    <p class="pb-2">8015, 106 St., 81st Ave., Edmonton, Alberta, Canada</p>
+                    <p class="pb-2">
+                      <a target="_blank" href="https://www.google.com/maps/place/8015+106+St+NW,+Edmonton,+AB+T6E+5P1,+Canada/@53.516818,-113.505152,17z/data=!4m5!3m4!1s0x53a0220521e6b0ef:0x4b03906fc7149f9b!8m2!3d53.516818!4d-113.502958">
+                        8015, 106 St., 81st Ave., Edmonton, Alberta, Canada
+                      </a>
+                    </p>
                     <p class="mb-0"><strong>Phone</strong></p>
-                    <p class="pb-2">+1587-568-6162</p>
+                    <p class="pb-2">
+                      <a href="tel:+1(587) 568-6162">+1(587) 568-6162</a>
+                    </p>
                     <p class="mb-0"><strong>Email</strong></p>
-                    <p>rahulchona11@gmail.com</p>
+                    <p>
+                      <a href="mailto:rahulchona11@gmail.com">rahulchona11@gmail.com</a>
+                    </p>
                   </div>
-                </div>
+                <!-- </div> -->
               </div>
             </div>
           </div>
