--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       </div>
       <div class="section">
         <div class="container">
-          <div class="button-container"><a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.facebook.com/manish.malhotra.504" rel="tooltip" title="Follow me on Facebook"><i class="fa fa-facebook"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.linkedin.com/in/rahul-chona-035a7995/" rel="tooltip" title="Follow me on linkedin"><i class="fa fa-google-plus"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="https://github.com/RahulChona11091991" rel="tooltip" title="Follow me on github"><i class="fa fa-instagram"></i></a></div>
+          <div class="button-container"><a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.facebook.com/manish.malhotra.504" rel="tooltip" title="Follow me on Facebook"><i class="fa fa-facebook"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.linkedin.com/in/rahul-chona-035a7995/" rel="tooltip" title="Follow me on linkedin"><i class="fa fa-linkedin"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="https://github.com/RahulChona11091991" rel="tooltip" title="Follow me on github"><i class="fa fa-github"></i></a></div>
         </div>
       </div>
     </div>
